// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when association extension has duplicate common property should have validation failures() 1`] = `"Association Extension EntityName redeclares property DuplicatePropertyName of base Association."`;

exports[`when association extension has duplicate common property should have validation failures() 2`] = `
Object {
  "column": 11,
  "line": 18,
  "tokenText": "DuplicatePropertyName",
}
`;

exports[`when association extension has duplicate property name should have validation failures() 1`] = `"Association Extension EntityName redeclares property DuplicatePropertyName of base Association."`;

exports[`when association extension has duplicate property name should have validation failures() 2`] = `
Object {
  "column": 9,
  "line": 18,
  "tokenText": "DuplicatePropertyName",
}
`;

exports[`when association extension has multiple duplicates should have validation failures() 1`] = `"Association Extension EntityName redeclares property DuplicatePropertyName1 of base Association."`;

exports[`when association extension has multiple duplicates should have validation failures() 2`] = `
Object {
  "column": 9,
  "line": 22,
  "tokenText": "DuplicatePropertyName1",
}
`;

exports[`when association extension has multiple duplicates should have validation failures() 3`] = `"Association Extension EntityName redeclares property DuplicatePropertyName2 of base Association."`;

exports[`when association extension has multiple duplicates should have validation failures() 4`] = `
Object {
  "column": 9,
  "line": 26,
  "tokenText": "DuplicatePropertyName2",
}
`;
